--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
+    "sharp": "^0.33.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "zod": "^3.24.2"
